tests/ui/non_inline_lang.rs
#[nanopass::langs]
mod langs {
    mod foo {}
    mod bar;
}

fn main() {}
